Tue Jun 21 19:44:54 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* test/ruby/enc/test_regex_casefold.rb: Add Windows-1251, KOI8-R, and
	  KOI8-U to encodings; definitely removed EUC-JP.

Tue Jun 21 19:32:23 2016  Mark St.Godard  <markstgodard@gmail.com>

	* lib/webrick/httprequest.rb (setup_forwarded_info): Use the first
	  value in X-Forwarded-Proto, if header contains multiple comma
	  separated values.  Some middlewares may add these values to the
	  list, not replacing.  [Fix GH-1386]

Tue Jun 21 17:17:42 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* test/ruby/test_io.rb: Skip test_readpartial_with_not_empty_buffer,
	  test_read_buffer_error, test_read_unlocktmp_ensure,
	  test_readpartial_unlocktmp_ensure, and
	  test_sysread_unlocktmp_ensure on cygwin,
	  because these tests repeatedly hang. This makes test_io.rb
	  complete in finite time on cygwin.

	* ChangeLog: Fix test_in.rb -> test_io.rb (two instances).

Tue Jun 21 16:38:14 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_casemap): do not put code with side effects
	  inside RSTRING_PTR() macro which evaluates the argument multiple
	  times.

Tue Jun 21 16:13:45 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (rb_str_casemap): fix memory leak.

Tue Jun 21 16:12:21 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (rb_str_casemap): int is too small for string size.

Tue Jun 21 15:42:22 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* test/ruby/test_io.rb: Skip test_read_buffer_error on cygwin,
	  because this test repeatedly hangs.

Tue Jun 21 15:35:14 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* LEGAL: Added filenames and copyrights for some files in
	  enc/trans/JIS.

Tue Jun 21 00:56:47 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (get_special_folder): fix calling convention of
	  SHGetPathFromIDListEx, which should be WINAPI.  pointed out by
	  @arton at http://twitter.com/arton/status/744884064277016576
